--- a/Benbox/res/layout/listadonotas.xml
+++ b/Benbox/res/layout/listadonotas.xml
@@ -3,13 +3,15 @@
       android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-	<ListView
-	    android:id="@+id/listView"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content" />
-
   	<TextView android:id="@id/android:empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+  	<ListView
+  	    android:id="@id/android:list"
+  	    android:layout_width="fill_parent"
+  	    android:layout_height="wrap_content"
+  	    android:layout_weight="1" >
+  	</ListView>
         
 </LinearLayout>
