--- a/Benbox/res/values/styles.xml
+++ b/Benbox/res/values/styles.xml
@@ -1,5 +1,24 @@
 <resources>
 
     <style name="AppTheme" parent="android:Theme.Light" />
-
+    <color name="blacklist">#fffff3</color>
+    <style name="listaprincipal"> 
+        <item name="android:textColor">#FFFFFF</item> 
+        <item name="android:typeface">normal</item> 
+        <item name="android:textSize">18dp</item> 
+        <item name="android:textStyle">bold</item> 
+        <item name="android:cacheColorHint">#000000</item> 
+        <item name="android:divider">#FFFFFF</item> 
+        <item name="android:dividerHeight">0dp</item> 
+        <item name="android:paddingTop">5dip</item> 
+        <item name="android:paddingBottom">5dip</item> 
+        <item name="android:paddingLeft">5dip</item> 
+        <item name="android:paddingRight">5dip</item> 
+    </style>
+	<style name="item_detalle"> 
+	    <item name="android:textColor">#000000</item> 
+	    <item name="android:typeface">normal</item> 
+	    <item name="android:textSize">16dp</item> 
+	    <item name="android:background">#FFFFFF</item> 
+	</style>
 </resources>
