--- a/Benbox/res/layout/nota.xml
+++ b/Benbox/res/layout/nota.xml
@@ -1,25 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/notatitulo"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@id/android:list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="60dp"
-        android:text="TextView" />
+        android:layout_weight="1" >
+    </ListView>
 
-    <TextView
-        android:id="@+id/notacompleta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/notatitulo"
-        android:layout_below="@+id/notatitulo"
-        android:layout_marginTop="36dp"
-        android:text="TextView" />
-
-</RelativeLayout>
+</LinearLayout>
