UI fixes: * no title in activities * consolidated background for the whole app * no splash * no icon launchers for every activity

--- a/Benbox/res/layout/listadonotas.xml
+++ b/Benbox/res/layout/listadonotas.xml
@@ -9,9 +9,11 @@
 
   	<ListView
   	    android:id="@id/android:list"
-  	    android:layout_width="fill_parent"
+  	    android:layout_width="0dip"
   	    android:layout_height="wrap_content"
-  	    android:layout_weight="1" >
+  	    android:layout_weight="1"
+  	    android:background="@drawable/background" >
+
   	</ListView>
         
 </LinearLayout>
