--- a/Benbox/res/layout/dashboard.xml
+++ b/Benbox/res/layout/dashboard.xml
@@ -7,13 +7,14 @@
       <GridView
           android:id="@+id/grid"
           android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
+          android:layout_height="fill_parent"
           android:layout_alignParentLeft="false"
           android:layout_alignParentTop="true"
+          android:layout_centerHorizontal="true"
           android:layout_centerInParent="true"
           android:layout_centerVertical="true"
-          android:gravity="center"
           android:background="@drawable/background"
+          android:gravity="center"
           android:numColumns="auto_fit" >
 
     </GridView>
