--- a/Benbox/res/menu/nuevanota.xml
+++ b/Benbox/res/menu/nuevanota.xml
@@ -3,4 +3,7 @@
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/menu_listadonotas"
+          android:icon="@drawable/listab"
+          android:showAsAction="ifRoom" />
 </menu>
