--- a/Benbox/res/layout/listadonotas.xml
+++ b/Benbox/res/layout/listadonotas.xml
@@ -12,7 +12,7 @@
   	    android:layout_width="0dip"
   	    android:layout_height="wrap_content"
   	    android:layout_weight="1"
-  	    android:background="@drawable/background" >
+  	    android:background="@drawable/backgroundlight" >
 
   	</ListView>
         
