--- a/Benbox/res/menu/listadonotas.xml
+++ b/Benbox/res/menu/listadonotas.xml
@@ -3,4 +3,8 @@
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+      <item android:id="@+id/menu_nuevanota"
+          android:icon="@drawable/addab"
+          android:showAsAction="ifRoom" />
+      
 </menu>
