--- a/Benbox/res/layout/listadonotas.xml
+++ b/Benbox/res/layout/listadonotas.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/backgroundlight" >
 
   	<TextView android:id="@id/android:empty"
         android:layout_width="wrap_content"
@@ -12,7 +13,7 @@
   	    android:layout_width="0dip"
   	    android:layout_height="wrap_content"
   	    android:layout_weight="1"
-  	    android:background="@drawable/backgroundlight" >
+  	    >
 
   	</ListView>
         
