--- a/Benbox/res/menu/nota.xml
+++ b/Benbox/res/menu/nota.xml
@@ -2,5 +2,9 @@
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="never" >
+    </item>
+    <item android:id="@+id/nota_share" android:title="@string/share" android:icon="@drawable/share"></item>
+    <item android:id="@+id/nota_edit" android:title="@string/edit" android:icon="@drawable/edit"></item>
+    <item android:id="@+id/nota_delete" android:title="@string/delete" android:icon="@drawable/delete"></item>
 </menu>
