--- a/Benbox/res/menu/nota.xml
+++ b/Benbox/res/menu/nota.xml
@@ -7,4 +7,11 @@
     <item android:id="@+id/nota_share" android:title="@string/share" android:icon="@drawable/share"></item>
     <item android:id="@+id/nota_edit" android:title="@string/edit" android:icon="@drawable/edit"></item>
     <item android:id="@+id/nota_delete" android:title="@string/delete" android:icon="@drawable/delete"></item>
+    
+     <item android:id="@+id/menu_nuevanota"
+          android:icon="@drawable/addab"
+          android:showAsAction="ifRoom" />
+      <item android:id="@+id/menu_listadonotas"
+          android:icon="@drawable/listab"
+          android:showAsAction="ifRoom" />
 </menu>
